# isra

./: README.md  pyproject.toml
.github/workflows/: ci.yml
isra/: custom.py  hooks.py
isra/fixtures/: client_script.json  letter_head.json  party_type.json  print_format.json  property_setter.json  warehouse_type.json  workflow.json  workflow_action_master.json  workflow_state.json  workspace.json
isra/isra/custom/: customer.json  item.json  item_barcode.json  item_default.json  packed_item.json  payment_entry.json  purchase_order_item.json  sales_invoice.json  sales_invoice_item.json  sales_order.json  sales_order_item.json  sales_taxes_and_charges_template.json  warehouse.json
isra/isra/custom_report/: gross_profit.py
isra/isra/dashboard_chart/vat_total/: vat_total.json
isra/isra/doctype/company_settings/: company_settings.js  company_settings.json  company_settings.py  test_company_settings.py
isra/isra/doctype/denomination/: denomination.js  denomination.json  denomination.py  test_denomination.py
isra/isra/doctype/physical_van_warehouse/: physical_van_warehouse.js  physical_van_warehouse.json  physical_van_warehouse.py  test_physical_van_warehouse.py
isra/isra/doctype/sales_in_charge_child/: sales_in_charge_child.json  sales_in_charge_child.py
isra/isra/doctype/van_warehouse_items/: van_warehouse_items.json  van_warehouse_items.py
isra/isra/workspace/isra/: isra.json
isra/override/: payment_entry.py  sales_invoice.py  warehouse.py
isra/public/js/: general_ledger.js  gross_profit_report.js  payment_entry.js  sales_invoice.js  sales_order.js
(+15 files in other folders)
